# rctab-api

./: .eslintrc.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .python-lint  .safety-policy.yml  Dockerfile  README.md  SECURITY.md  data.json  example.auth.env  example.env  mypy.ini  pyproject.toml  todo.md
.github/workflows/: deploy-api-acr.yml  deploy-api-dh.yml  deploy.yml  dev-test-deploy.yml  gitleaks.yml  linter.yml  safety.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 9f4b6184b2f8_drop_usage_pkey.py  b65796c99771_squash.py  d682862a889a_create_azure_usage_report_table.py
compose/: docker-compose-external.yaml  docker-compose-local-unittests.yaml  docker-compose-local.yaml  docker-compose.yaml
docs/: conf.py  index.rst
docs/content/: logging.md  setup.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_8a8e7552de987e81___init___py.html  z_8a8e7552de987e81_constants_py.html  z_8a8e7552de987e81_db_py.html  z_8a8e7552de987e81_debug_py.html  z_8a8e7552de987e81_exceptions_py.html  z_8a8e7552de987e81_logutils_py.html  z_8a8e7552de987e81_main_py.html  z_8a8e7552de987e81_settings_py.html  z_8a8e7552de987e81_tasks_py.html  z_8a8e7552de987e81_utils_py.html  z_ab530c55e4118bca_frontend_py.html  z_c098a83cd6bdb85a___init___py.html  z_c098a83cd6bdb85a_accounting_models_py.html  z_c098a83cd6bdb85a_auth_py.html  z_c098a83cd6bdb85a_models_py.html  z_c098a83cd6bdb85a_utils_py.html  z_de0e2a686d399a4e___init___py.html  z_de0e2a686d399a4e_abolishment_py.html  z_de0e2a686d399a4e_allocations_py.html  z_de0e2a686d399a4e_approvals_py.html  z_de0e2a686d399a4e_cost_recovery_py.html  z_de0e2a686d399a4e_desired_states_py.html  z_de0e2a686d399a4e_finances_py.html  z_de0e2a686d399a4e_persistence_py.html  z_de0e2a686d399a4e_routes_py.html  z_de0e2a686d399a4e_send_emails_py.html  z_de0e2a686d399a4e_status_py.html  z_de0e2a686d399a4e_subscription_py.html  z_de0e2a686d399a4e_summary_emails_py.html  z_de0e2a686d399a4e_usage_py.html
rctab/: __init__.py  constants.py  daily_routine_tasks.py  db.py  debug.py  exceptions.py  logutils.py  main.py  settings.py  tasks.py  types.py  utils.py  worker.py
rctab/crud/: __init__.py  accounting_models.py  auth.py  locks.py  models.py  schema.py  utils.py
rctab/routers/: __init__.py  frontend.py
rctab/routers/accounting/: __init__.py  abolishment.py  allocations.py  approvals.py  cost_recovery.py  desired_states.py  finances.py  persistence.py  routes.py  send_emails.py  status.py  subscription.py  summary_emails.py  usage.py
rctab/static/css/: styles.css
rctab/static/scripts/: download_table.js  tab_functions.js  tables.js  usage_data.js
rctab/templates/: 404.html  azreport.html  azure_report.html  azure_usage_info.html  base_site.html  index.html  insufficient_privileges.html  signed_in_azure_info.html  signed_in_azure_info_details.html  signed_in_base.html
rctab/templates/emails/: abolishment.html  base.html  blank.html  daily_summary.html  expiry_looming.html  new_allocation.html  new_approval.html  new_finance.html  persistence_change.html  role_assignment_change.html  status_change.html  subscription_email_base.html  usage_alert.html  welcome.html  will_be_disabled.html  will_be_enabled.html
reports/: azure-report.ipynb  report_utils.py
scripts/: README.md  get_dev_data.py  get_failed_emails.py  populate_local_db.py  prestart.sh  runtests.sh  testcode.sh
sql/: cost_recovery.sql
tests/: conftest.py  test_settings.py  test_tasks.py  utils.py
tests/data/: example-monthly-correct.json  example-monthly-wrong.json  example.json
tests/test_crud/: __init__.py  test_auth.py  test_locks.py
tests/test_routes/: api_calls.py  conftest.py  constants.py  test_abolishment.py  test_allocations.py  test_approvals.py  test_authentication.py  test_cost_recovery.py  test_daily_routine_tasks.py  test_desired_states.py  test_email_templates.py  test_finances.py  test_frontend.py  test_locks_integration.py  test_persistence.py  test_routes.py  test_send_emails.py  test_status.py  test_subscription.py  test_summary_emails.py  test_transactions.py  test_usage.py  utils.py
