[tool.poetry]
name = "RCTab"
version = "1.3.1"
description = "The RCTab API. Manage Azure budgets and usage"
authors = []

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
alembic = "^1.7.1"
anyio = "^4.4.0"  # only pinned to satisfy safety warning on <=4.3.0
asyncpg = "^0.27.0"
azure-identity = "^1.16.0"
celery = "^5.3.5"
databases = { version = "^0.7.0", extras = ["postgresql"] }
fastapi = "^0.111.0"
fastapimsal = { git = "https://github.com/alan-turing-institute/fastapimsal", branch = "update-pydantic" }
Jinja2 = "^3.1.3"
myst-parser = {version = "^3.0.1", optional = true}
numpy = "<2.0.0"
opencensus-ext-azure = "^1.1.7"
pandas = "^1.1.3"
plotly = "^5.14.1"
psycopg2-binary = "^2.9.3"
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.3.4"
PyJWT = { extras = ["crypto"], version = "^2.4.0" }
python-dotenv = "^1.0.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
requests = "^2.32.3"
sendgrid = "^6.9.1"
sqlalchemy = "~1.4.52"
sphinx = {version = "^7.2.6", optional = true}
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
secure = "^0.3.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
devtools = { extras = ["pygments"], version = "^0.8.0" }
flake8 = "^3.8.4"
genbadge = "^1.1.1"
httpie = "3.2.1"  # upgrade once the 3.2.2 safety issue is resolved
httpie-jwt-auth = "^0.4.0"
hypothesis = "^6.82.6"
ipykernel = "^6.19.4"
isort = "^5.6.4"
mypy = "^1.10.0"
pre-commit = "^2.14.1"
pydocstyle = "^6.3.0"
pylint = "^2.10.2"
pylint-absolute-imports = "^1.0.1"
pymarkdownlnt = "^0.9.6"
pytest = "^7.1.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.6.1"
safety = "^3.1.0"
sqlalchemy-stubs = "^0.3"
types-requests = "^2.32.0.20240602"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "myst-parser"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
