[project]
name = "RCTab"
version = "1.8.1"
description = "The RCTab API. Manage Azure budgets and usage"
authors = []
dynamic = [ "dependencies" ]
requires-python = ">=3.10,<3.12"
dependencies = [
    "alembic (>=1.16.3,<2.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "asyncpg (>=0.27.0,<0.28.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "databases (>=0.7.0,<0.8.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "fastapimsal @ git+https://git@github.com/alan-turing-institute/fastapimsal@0.10.0",
    "jinja2 (>=3.1.6,<4.0.0)",
    "myst-parser[docs] (>=3.0.1,<4.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "opencensus-ext-azure (>=1.1.15,<2.0.0)",
    "pandas (>=1.5.3,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "rctab-models @ git+https://git@github.com/alan-turing-institute/rctab-models@0.3.0",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "secure (>=0.3.0,<0.4.0)",
    "sendgrid (>=6.12.4,<7.0.0)",
    "sphinx (>=7.3.7,<8.0.0)",
    "sphinx-rtd-theme[docs] (>=1.3.0,<2.0.0)",
    "sphinxcontrib-napoleon[docs] (>=0.7,<0.8)",
    "sqlalchemy (>=1.4.54,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
devtools = { extras = ["pygments"], version = "^0.8.0" }
flake8 = "^3.8.4"
genbadge = "^1.1.1"
httpie = "^3.2.3"
httpie-jwt-auth = "^0.4.0"
hypothesis = "^6.82.6"
ipykernel = "^6.19.4"
isort = "^5.6.4"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pydocstyle = "^6.3.0"
pylint = "^2.10.2"
pylint-absolute-imports = "^1.0.1"
pymarkdownlnt = "^0.9.6"
pytest = "^7.1.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.6.1"
safety = "^3.1.0"
types-requests = "^2.32.0.20240602"
pyre-check = "^0.9.25"
coverage = "^7.9.2"

[project.optional-dependencies]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "myst-parser"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
